small fix on navbar, shadow behind navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,7 +5,7 @@
   border-width: 2px;
   position: sticky;
   top: 0;
-  z-index: 200;
+  z-index: 400;
 
 }
 
